--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     "autoload": {
         "classmap": ["src/"]
     },
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^6.3"
+    }
 }
