--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "autoload": {
-        "classmap": ["src/"]
+        "psr-4": {
+            "SecretRedirect\\": "src/SecretRedirect"
+        }
     },
     "require": {},
     "require-dev": {
